[package]
name = "tabs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lz4_flex = "0.9"
memmap2 = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0" }
serde_json = "1.0"
time = "0.3"
